# clicky-windows-shipv3

./: .env.example  .gitignore  AGENTS.md  README.md  SHIP-SDLC-GATE-CHECKLIST.md  package-lock.json  package.json
apps/clicky-windows/: index.html  package.json  vite.config.ts
apps/clicky-windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/clicky-windows/src-tauri/src/: main.rs
docs/: ASSUMPTIONS.md  CLAUDE_REVIEW_BRIEF.md  CLICKY_QA_REPORT_2026-05-14.md  CLICKY_RELIABILITY_PLAYBOOK.md  CLICKY_WINDOWS_PLAN.md  CODEX_RESPONSE_TO_HARDCORE_REVIEW_2026-05-14.md  ELEVENLABS_RECOVERY.md  GOAL_AUDIT.md  HEYCLICKY_PRODUCT_REFERENCE.md  LATENCY_DEBUG.md  LIVE_PROVIDER_SETUP.md  PHASE2B_QA_REPORT.md  PHASE2_QA_REPORT.md  PLAYGROUND_CLICKY_MERGE_NOTES.md  PLAYGROUND_CLICKY_MERGE_QA_2026-05-14.md  SECURITY.md  TESTING.md  TIPTOUR_REFERENCE_NOTES.md  VOICE_PROVIDER_REPLACEMENT.md  VOXCPM_LOCAL_TTS.md  api-contract.md  milestones.md  ship-report.md  test-log.md  ux-spec.md
scripts/: acceptance-live-app.mjs  audit-clicky-goal.mjs  check-voxcpm-local.mjs  configure-live-providers.ps1  run-live-clicky-session.ps1  run-tauri.mjs  run-voxcpm-local.ps1  smoke-internet-tools.mjs  smoke-live-providers.mjs  smoke-phase1.mjs  smoke-phase2-native.ps1  smoke-phase2.mjs  smoke-phase2b-latency.mjs  smoke-product-flow.mjs  smoke-secret-scan.mjs  smoke-shortcut.mjs  smoke-style-controls.mjs  smoke-voice-behavior.mjs  smoke-voice-fallback.mjs  smoke-voice-health.mjs
tools/: voxcpm_openai_server.py
worker/: .dev.vars.example  package.json  tsconfig.json  wrangler.toml  wrangler.toml.example
(+64 files in other folders)
